Version 1.0pre3 -- DEVELOPMENT
------------------------------
- Updated Polish translation


Version 1.0pre2 -- January 15, 2000 
-----------------------------------
- A number of security fixes
- Replaced error messages with better, formatted, and meaningful messages.
- Fixed "reply all" so that it works intelligently now
- Made deleted (but not expunged) messages easier to detect (only if $auto_expunge = false)
- Fixed bug that didn't display size correctly in search results
- Major memory management and speed improvements with downloading of attachments
- Made $auto_expunge variable actually do something
- Fixed bug that didn't display login failure message
- Fixed minor bug in sqimap_mailbox_list
- Added sqimap_capability function to check capabilities of server.
- Rewrote sqimap_get_delim to use NAMESPACE capability (if available) to get delimiter.
- Added Catalan translation of Help documents by Josep Sanz <jsanz@fa.upc.es>
- Added Taiwan translation by "ching" <ching@kiwa.com.tw>

Version 1.0pre1 -- December 14, 2000 
------------------------------------
- Fixed bug in sending messages with a blank line with a "."
- Folder displays have been changed to be more readable in drop-down lists
- For security, login verification happens, then we're redirected to webmail.php
- Folder sorting now case insensative
- added config option to set IMAP folder delimiter rather than always detecting it
- Made session cookie parameter use PHP's settings rather than making assumptions
- Select/Deslect all implemented using only HTML (not Javascript)
- Fixed default charset that is sent with outbound messages (now user's preferred charset)
- Sort method saving now transparent to user, and saves between sessions
- Now replacing all \n with \r\n before sending the message.
- Added sorting option for NO sorting.. 10000 times faster!
- Using <pre> tags for viewing message body instead of <tt> and &nbsp;
- Added redirection from subdirectories to login page