@@ -1,5 +1,6 @@
 Version 1.0pre3 -- DEVELOPMENT
 ------------------------------
+- Finally fixed the IE/SSL download problem!!
 - Updated Polish translation
 
 
